// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sendAxauEarlyAccessConfirmation — snapshot > renders the all-params-present body with the submission details block > axau-early-access-confirmation-html 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
<body style="margin:0;padding:0;font-family:Georgia,serif;background:#f5f5f0;">
  <table width="100%" cellpadding="0" cellspacing="0" style="background:#f5f5f0;padding:40px 20px;">
    <tr><td align="center">
      <table width="600" cellpadding="0" cellspacing="0" style="background:#ffffff;border:1px solid #d1d5db;">
        <tr>
          <td style="background:#1e3a5f;padding:32px 36px;">
            <p style="color:#b8860b;font-family:'Courier New',monospace;font-size:11px;letter-spacing:0.18em;text-transform:uppercase;margin:0 0 8px 0;">AXIOM PROTOCOL</p>
            <h1 style="color:#ffffff;font-family:Georgia,serif;font-size:26px;font-weight:700;margin:0;line-height:1.2;">AXAU Early Access</h1>
            <p style="color:#94a3b8;font-family:'Courier New',monospace;font-size:11px;margin:8px 0 0 0;letter-spacing:0.1em;">APPLICATION RECEIVED</p>
          </td>
        </tr>
        <tr>
          <td style="padding:36px;">
            <p style="color:#374151;font-size:16px;line-height:1.6;margin:0 0 20px 0;">Dear Jane Doe,</p>
            <p style="color:#374151;font-size:15px;line-height:1.6;margin:0 0 24px 0;">
              Your application for AXAU Early Access has been received and is under review. The Axiom Protocol compliance team will process your identity verification and notify you once your wallet is approved.
            </p>
            <table width="100%" cellpadding="0" cellspacing="0" style="background:#f9fafb;border:1px solid #e5e7eb;margin:0 0 24px 0;">
              <tr><td style="padding:20px 24px;">
                <p style="font-family:'Courier New',monospace;font-size:11px;letter-spacing:0.12em;color:#6b7280;text-transform:uppercase;margin:0 0 12px 0;">Submission Details</p>
                <table width="100%" cellpadding="0" cellspacing="0">
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:4px 0;">Reference ID</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1e3a5f;font-weight:700;text-align:right;padding:4px 0;">#SUB-ABCD</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:4px 0;">Wallet</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1e3a5f;font-weight:700;text-align:right;padding:4px 0;">0xAbCd...Ef12</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:4px 0;">Status</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#b8860b;font-weight:700;text-align:right;padding:4px 0;">UNDER REVIEW</td>
                  </tr>
                </table>
              </td></tr>
            </table>
            <p style="color:#374151;font-size:14px;line-height:1.6;margin:0 0 16px 0;">
              Once approved, your wallet address will be registered on-chain as an eligible AXAU minter. You can then access the AXAU mint terminal at <a href="https://axiomprotocol.app/axau#mint-terminal" style="color:#1e3a5f;">axiomprotocol.app/axau</a>.
            </p>
            <p style="color:#9ca3af;font-size:13px;line-height:1.5;margin:0;">
              AXAU is a gold reserve unit. Participation is subject to identity verification and eligibility requirements.
            </p>
          </td>
        </tr>
        <tr>
          <td style="background:#f9fafb;border-top:1px solid #e5e7eb;padding:20px 36px;">
            <p style="font-family:'Courier New',monospace;font-size:10px;color:#9ca3af;letter-spacing:0.1em;margin:0;">AXIOM PROTOCOL — ARBITRUM ONE — axiomprotocol.app</p>
          </td>
        </tr>
      </table>
    </td></tr>
  </table>
</body>
</html>"
`;

exports[`sendAxauPurchaseRequestConfirmation — snapshot > omits the XAU/USD price row when xauUsdPrice is null > axau-purchase-request-no-price-html 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
<body style="margin:0;padding:0;font-family:Georgia,serif;background:#f5f5f0;">
  <table width="100%" cellpadding="0" cellspacing="0" style="background:#f5f5f0;padding:40px 20px;">
    <tr><td align="center">
      <table width="600" cellpadding="0" cellspacing="0" style="background:#ffffff;border:1px solid #d1d5db;">
        <tr>
          <td style="background:#1e3a5f;padding:32px 36px;">
            <p style="color:#b8860b;font-family:'Courier New',monospace;font-size:11px;letter-spacing:0.18em;text-transform:uppercase;margin:0 0 8px 0;">AXIOM PROTOCOL</p>
            <h1 style="color:#ffffff;font-family:Georgia,serif;font-size:26px;font-weight:700;margin:0;line-height:1.2;">AXAU Purchase Request</h1>
            <p style="color:#94a3b8;font-family:'Courier New',monospace;font-size:11px;margin:8px 0 0 0;letter-spacing:0.1em;">REQUEST RECEIVED</p>
          </td>
        </tr>
        <tr>
          <td style="padding:36px;">
            <p style="color:#374151;font-size:15px;line-height:1.6;margin:0 0 24px 0;">
              Your AXAU purchase request has been received. The Axiom Protocol operations team will process your request — acquiring PAXG, depositing it to the vault, and minting AXAU to your wallet.
            </p>
            <table width="100%" cellpadding="0" cellspacing="0" style="background:#f9fafb;border:1px solid #e5e7eb;margin:0 0 24px 0;">
              <tr><td style="padding:20px 24px;">
                <p style="font-family:'Courier New',monospace;font-size:11px;letter-spacing:0.12em;color:#6b7280;text-transform:uppercase;margin:0 0 14px 0;">Order Summary</p>
                <table width="100%" cellpadding="0" cellspacing="0">
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:5px 0;">Reference ID</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1e3a5f;font-weight:700;text-align:right;padding:5px 0;">#REQ-ABCD</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:5px 0;">You Spend</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1e3a5f;font-weight:700;text-align:right;padding:5px 0;">1000.00 AXUSD</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:5px 0;">You Receive</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#b8860b;font-weight:700;text-align:right;padding:5px 0;">0.5423 AXAU</td>
                  </tr>
                  
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:5px 0;">Wallet</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1e3a5f;font-weight:700;text-align:right;padding:5px 0;">0xAbCd...Ef12</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:5px 0;">Status</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#b8860b;font-weight:700;text-align:right;padding:5px 0;">PENDING FULFILLMENT</td>
                  </tr>
                </table>
              </td></tr>
            </table>
            <p style="color:#374151;font-size:14px;line-height:1.6;margin:0 0 8px 0;">
              You will receive a separate confirmation once AXAU has been minted to your wallet. Processing typically completes within 1 business day.
            </p>
            <p style="color:#9ca3af;font-size:13px;line-height:1.5;margin:0;">
              AXAU is a gold reserve unit backed by PAXG on Arbitrum One. All minting is subject to vault availability and compliance verification.
            </p>
          </td>
        </tr>
        <tr>
          <td style="background:#f9fafb;border-top:1px solid #e5e7eb;padding:20px 36px;">
            <p style="font-family:'Courier New',monospace;font-size:10px;color:#9ca3af;letter-spacing:0.1em;margin:0;">AXIOM PROTOCOL — ARBITRUM ONE — axiomprotocol.app</p>
          </td>
        </tr>
      </table>
    </td></tr>
  </table>
</body>
</html>"
`;

exports[`sendAxauPurchaseRequestConfirmation — snapshot > renders the order summary with the XAU/USD price row when xauUsdPrice is provided > axau-purchase-request-with-price-html 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
<body style="margin:0;padding:0;font-family:Georgia,serif;background:#f5f5f0;">
  <table width="100%" cellpadding="0" cellspacing="0" style="background:#f5f5f0;padding:40px 20px;">
    <tr><td align="center">
      <table width="600" cellpadding="0" cellspacing="0" style="background:#ffffff;border:1px solid #d1d5db;">
        <tr>
          <td style="background:#1e3a5f;padding:32px 36px;">
            <p style="color:#b8860b;font-family:'Courier New',monospace;font-size:11px;letter-spacing:0.18em;text-transform:uppercase;margin:0 0 8px 0;">AXIOM PROTOCOL</p>
            <h1 style="color:#ffffff;font-family:Georgia,serif;font-size:26px;font-weight:700;margin:0;line-height:1.2;">AXAU Purchase Request</h1>
            <p style="color:#94a3b8;font-family:'Courier New',monospace;font-size:11px;margin:8px 0 0 0;letter-spacing:0.1em;">REQUEST RECEIVED</p>
          </td>
        </tr>
        <tr>
          <td style="padding:36px;">
            <p style="color:#374151;font-size:15px;line-height:1.6;margin:0 0 24px 0;">
              Your AXAU purchase request has been received. The Axiom Protocol operations team will process your request — acquiring PAXG, depositing it to the vault, and minting AXAU to your wallet.
            </p>
            <table width="100%" cellpadding="0" cellspacing="0" style="background:#f9fafb;border:1px solid #e5e7eb;margin:0 0 24px 0;">
              <tr><td style="padding:20px 24px;">
                <p style="font-family:'Courier New',monospace;font-size:11px;letter-spacing:0.12em;color:#6b7280;text-transform:uppercase;margin:0 0 14px 0;">Order Summary</p>
                <table width="100%" cellpadding="0" cellspacing="0">
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:5px 0;">Reference ID</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1e3a5f;font-weight:700;text-align:right;padding:5px 0;">#REQ-ABCD</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:5px 0;">You Spend</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1e3a5f;font-weight:700;text-align:right;padding:5px 0;">1000.00 AXUSD</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:5px 0;">You Receive</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#b8860b;font-weight:700;text-align:right;padding:5px 0;">0.5423 AXAU</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:5px 0;">XAU/USD at Request</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1e3a5f;font-weight:700;text-align:right;padding:5px 0;">$1843.27</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:5px 0;">Wallet</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1e3a5f;font-weight:700;text-align:right;padding:5px 0;">0xAbCd...Ef12</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:5px 0;">Status</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#b8860b;font-weight:700;text-align:right;padding:5px 0;">PENDING FULFILLMENT</td>
                  </tr>
                </table>
              </td></tr>
            </table>
            <p style="color:#374151;font-size:14px;line-height:1.6;margin:0 0 8px 0;">
              You will receive a separate confirmation once AXAU has been minted to your wallet. Processing typically completes within 1 business day.
            </p>
            <p style="color:#9ca3af;font-size:13px;line-height:1.5;margin:0;">
              AXAU is a gold reserve unit backed by PAXG on Arbitrum One. All minting is subject to vault availability and compliance verification.
            </p>
          </td>
        </tr>
        <tr>
          <td style="background:#f9fafb;border-top:1px solid #e5e7eb;padding:20px 36px;">
            <p style="font-family:'Courier New',monospace;font-size:10px;color:#9ca3af;letter-spacing:0.1em;margin:0;">AXIOM PROTOCOL — ARBITRUM ONE — axiomprotocol.app</p>
          </td>
        </tr>
      </table>
    </td></tr>
  </table>
</body>
</html>"
`;

exports[`sendInboundAchNotification — snapshot > omits the From row when senderName is null > inbound-ach-notification-no-sender-html 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
<body style="margin:0;padding:0;font-family:Georgia,serif;background:#f5f5f0;">
  <table width="100%" cellpadding="0" cellspacing="0" style="background:#f5f5f0;padding:40px 20px;">
    <tr><td align="center">
      <table width="600" cellpadding="0" cellspacing="0" style="background:#ffffff;border:1px solid #d1d5db;">
        <tr>
          <td style="background:#1D3D2A;padding:32px 36px;">
            <p style="color:#b8860b;font-family:'Courier New',monospace;font-size:11px;letter-spacing:0.18em;text-transform:uppercase;margin:0 0 8px 0;">AXIOM NEXUS BANKING</p>
            <h1 style="color:#ffffff;font-family:Georgia,serif;font-size:26px;font-weight:700;margin:0;line-height:1.2;">Direct Deposit Received</h1>
            <p style="color:#a7c4a0;font-family:'Courier New',monospace;font-size:11px;margin:8px 0 0 0;letter-spacing:0.1em;">GET PAID EARLY — FUNDS AVAILABLE</p>
          </td>
        </tr>
        <tr>
          <td style="padding:36px;">
            <p style="color:#374151;font-size:16px;line-height:1.6;margin:0 0 20px 0;">Dear Jane Doe,</p>
            <p style="color:#374151;font-size:15px;line-height:1.6;margin:0 0 24px 0;">
              Great news — your direct deposit has arrived in your Axiom Nexus Account. Funds are available now,
              typically 1–2 business days before the official settlement date.
            </p>
            <table width="100%" cellpadding="0" cellspacing="0" style="background:#f0f9f0;border:2px solid #1D3D2A;margin:0 0 24px 0;">
              <tr><td style="padding:24px 28px;">
                <p style="font-family:'Courier New',monospace;font-size:11px;letter-spacing:0.12em;color:#1D3D2A;text-transform:uppercase;margin:0 0 16px 0;font-weight:700;">Deposit Summary</p>
                <table width="100%" cellpadding="0" cellspacing="0">
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;border-bottom:1px solid #d1fae5;">Amount Received</td>
                    <td style="font-family:'Courier New',monospace;font-size:20px;color:#1D3D2A;font-weight:700;text-align:right;padding:6px 0;border-bottom:1px solid #d1fae5;">$2,500.00</td>
                  </tr>
                  
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;border-bottom:1px solid #d1fae5;">New Balance</td>
                    <td style="font-family:'Courier New',monospace;font-size:13px;color:#1B2A4A;font-weight:700;text-align:right;padding:6px 0;border-bottom:1px solid #d1fae5;">$3,750.00</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;border-bottom:1px solid #d1fae5;">Received At</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1B2A4A;text-align:right;padding:6px 0;border-bottom:1px solid #d1fae5;">Saturday, March 15, 2025 at 2:30 PM UTC</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;">Account Ref</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1B2A4A;font-weight:600;text-align:right;padding:6px 0;">AXN-REF-001</td>
                  </tr>
                </table>
              </td></tr>
            </table>
            <p style="color:#374151;font-size:14px;line-height:1.6;margin:0 0 16px 0;">
              Your funds are held at First Internet Bank under the Axiom Nexus program, FDIC-insured up to $250,000.
              View your complete account history and balance at <a href="https://axiomprotocol.app/banking/my-account" style="color:#1D3D2A;font-weight:600;">axiomprotocol.app/banking/my-account</a>.
            </p>
            <table width="100%" cellpadding="0" cellspacing="0" style="margin:24px 0;">
              <tr>
                <td align="center">
                  <a href="https://axiomprotocol.app/banking/my-account" style="display:inline-block;background:#1D3D2A;color:#ffffff;text-decoration:none;padding:14px 36px;font-family:'Courier New',monospace;font-size:12px;letter-spacing:0.1em;text-transform:uppercase;font-weight:700;">
                    View My Account →
                  </a>
                </td>
              </tr>
            </table>
            <p style="color:#9ca3af;font-size:13px;line-height:1.5;margin:0;">
              To update or share your direct deposit details with an employer, visit
              <a href="https://axiomprotocol.app/direct-deposit" style="color:#6b7280;">axiomprotocol.app/direct-deposit</a>.
            </p>
          </td>
        </tr>
        <tr>
          <td style="background:#f9fafb;border-top:1px solid #e5e7eb;padding:20px 36px;">
            <p style="font-family:'Courier New',monospace;font-size:10px;color:#9ca3af;letter-spacing:0.1em;margin:0;">
              AXIOM NEXUS BANKING — FIRST INTERNET BANK — FDIC INSURED — axiomprotocol.app
            </p>
          </td>
        </tr>
      </table>
    </td></tr>
  </table>
</body>
</html>"
`;

exports[`sendInboundAchNotification — snapshot > omits the New Balance row when newBalanceCents is null > inbound-ach-notification-no-balance-html 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
<body style="margin:0;padding:0;font-family:Georgia,serif;background:#f5f5f0;">
  <table width="100%" cellpadding="0" cellspacing="0" style="background:#f5f5f0;padding:40px 20px;">
    <tr><td align="center">
      <table width="600" cellpadding="0" cellspacing="0" style="background:#ffffff;border:1px solid #d1d5db;">
        <tr>
          <td style="background:#1D3D2A;padding:32px 36px;">
            <p style="color:#b8860b;font-family:'Courier New',monospace;font-size:11px;letter-spacing:0.18em;text-transform:uppercase;margin:0 0 8px 0;">AXIOM NEXUS BANKING</p>
            <h1 style="color:#ffffff;font-family:Georgia,serif;font-size:26px;font-weight:700;margin:0;line-height:1.2;">Direct Deposit Received</h1>
            <p style="color:#a7c4a0;font-family:'Courier New',monospace;font-size:11px;margin:8px 0 0 0;letter-spacing:0.1em;">GET PAID EARLY — FUNDS AVAILABLE</p>
          </td>
        </tr>
        <tr>
          <td style="padding:36px;">
            <p style="color:#374151;font-size:16px;line-height:1.6;margin:0 0 20px 0;">Dear Jane Doe,</p>
            <p style="color:#374151;font-size:15px;line-height:1.6;margin:0 0 24px 0;">
              Great news — your direct deposit has arrived in your Axiom Nexus Account. Funds are available now,
              typically 1–2 business days before the official settlement date.
            </p>
            <table width="100%" cellpadding="0" cellspacing="0" style="background:#f0f9f0;border:2px solid #1D3D2A;margin:0 0 24px 0;">
              <tr><td style="padding:24px 28px;">
                <p style="font-family:'Courier New',monospace;font-size:11px;letter-spacing:0.12em;color:#1D3D2A;text-transform:uppercase;margin:0 0 16px 0;font-weight:700;">Deposit Summary</p>
                <table width="100%" cellpadding="0" cellspacing="0">
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;border-bottom:1px solid #d1fae5;">Amount Received</td>
                    <td style="font-family:'Courier New',monospace;font-size:20px;color:#1D3D2A;font-weight:700;text-align:right;padding:6px 0;border-bottom:1px solid #d1fae5;">$2,500.00</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;border-bottom:1px solid #d1fae5;">From</td>
                    <td style="font-family:'Courier New',monospace;font-size:13px;color:#1B2A4A;font-weight:600;text-align:right;padding:6px 0;border-bottom:1px solid #d1fae5;">Acme Corp Payroll</td>
                  </tr>
                  
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;border-bottom:1px solid #d1fae5;">Received At</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1B2A4A;text-align:right;padding:6px 0;border-bottom:1px solid #d1fae5;">Saturday, March 15, 2025 at 2:30 PM UTC</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;">Account Ref</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1B2A4A;font-weight:600;text-align:right;padding:6px 0;">AXN-REF-001</td>
                  </tr>
                </table>
              </td></tr>
            </table>
            <p style="color:#374151;font-size:14px;line-height:1.6;margin:0 0 16px 0;">
              Your funds are held at First Internet Bank under the Axiom Nexus program, FDIC-insured up to $250,000.
              View your complete account history and balance at <a href="https://axiomprotocol.app/banking/my-account" style="color:#1D3D2A;font-weight:600;">axiomprotocol.app/banking/my-account</a>.
            </p>
            <table width="100%" cellpadding="0" cellspacing="0" style="margin:24px 0;">
              <tr>
                <td align="center">
                  <a href="https://axiomprotocol.app/banking/my-account" style="display:inline-block;background:#1D3D2A;color:#ffffff;text-decoration:none;padding:14px 36px;font-family:'Courier New',monospace;font-size:12px;letter-spacing:0.1em;text-transform:uppercase;font-weight:700;">
                    View My Account →
                  </a>
                </td>
              </tr>
            </table>
            <p style="color:#9ca3af;font-size:13px;line-height:1.5;margin:0;">
              To update or share your direct deposit details with an employer, visit
              <a href="https://axiomprotocol.app/direct-deposit" style="color:#6b7280;">axiomprotocol.app/direct-deposit</a>.
            </p>
          </td>
        </tr>
        <tr>
          <td style="background:#f9fafb;border-top:1px solid #e5e7eb;padding:20px 36px;">
            <p style="font-family:'Courier New',monospace;font-size:10px;color:#9ca3af;letter-spacing:0.1em;margin:0;">
              AXIOM NEXUS BANKING — FIRST INTERNET BANK — FDIC INSURED — axiomprotocol.app
            </p>
          </td>
        </tr>
      </table>
    </td></tr>
  </table>
</body>
</html>"
`;

exports[`sendInboundAchNotification — snapshot > renders all rows when senderName and newBalanceCents are both present > inbound-ach-notification-all-fields-html 1`] = `
"<!DOCTYPE html>
<html>
<head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
<body style="margin:0;padding:0;font-family:Georgia,serif;background:#f5f5f0;">
  <table width="100%" cellpadding="0" cellspacing="0" style="background:#f5f5f0;padding:40px 20px;">
    <tr><td align="center">
      <table width="600" cellpadding="0" cellspacing="0" style="background:#ffffff;border:1px solid #d1d5db;">
        <tr>
          <td style="background:#1D3D2A;padding:32px 36px;">
            <p style="color:#b8860b;font-family:'Courier New',monospace;font-size:11px;letter-spacing:0.18em;text-transform:uppercase;margin:0 0 8px 0;">AXIOM NEXUS BANKING</p>
            <h1 style="color:#ffffff;font-family:Georgia,serif;font-size:26px;font-weight:700;margin:0;line-height:1.2;">Direct Deposit Received</h1>
            <p style="color:#a7c4a0;font-family:'Courier New',monospace;font-size:11px;margin:8px 0 0 0;letter-spacing:0.1em;">GET PAID EARLY — FUNDS AVAILABLE</p>
          </td>
        </tr>
        <tr>
          <td style="padding:36px;">
            <p style="color:#374151;font-size:16px;line-height:1.6;margin:0 0 20px 0;">Dear Jane Doe,</p>
            <p style="color:#374151;font-size:15px;line-height:1.6;margin:0 0 24px 0;">
              Great news — your direct deposit has arrived in your Axiom Nexus Account. Funds are available now,
              typically 1–2 business days before the official settlement date.
            </p>
            <table width="100%" cellpadding="0" cellspacing="0" style="background:#f0f9f0;border:2px solid #1D3D2A;margin:0 0 24px 0;">
              <tr><td style="padding:24px 28px;">
                <p style="font-family:'Courier New',monospace;font-size:11px;letter-spacing:0.12em;color:#1D3D2A;text-transform:uppercase;margin:0 0 16px 0;font-weight:700;">Deposit Summary</p>
                <table width="100%" cellpadding="0" cellspacing="0">
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;border-bottom:1px solid #d1fae5;">Amount Received</td>
                    <td style="font-family:'Courier New',monospace;font-size:20px;color:#1D3D2A;font-weight:700;text-align:right;padding:6px 0;border-bottom:1px solid #d1fae5;">$2,500.00</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;border-bottom:1px solid #d1fae5;">From</td>
                    <td style="font-family:'Courier New',monospace;font-size:13px;color:#1B2A4A;font-weight:600;text-align:right;padding:6px 0;border-bottom:1px solid #d1fae5;">Acme Corp Payroll</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;border-bottom:1px solid #d1fae5;">New Balance</td>
                    <td style="font-family:'Courier New',monospace;font-size:13px;color:#1B2A4A;font-weight:700;text-align:right;padding:6px 0;border-bottom:1px solid #d1fae5;">$3,750.00</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;border-bottom:1px solid #d1fae5;">Received At</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1B2A4A;text-align:right;padding:6px 0;border-bottom:1px solid #d1fae5;">Saturday, March 15, 2025 at 2:30 PM UTC</td>
                  </tr>
                  <tr>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#6b7280;padding:6px 0;">Account Ref</td>
                    <td style="font-family:'Courier New',monospace;font-size:12px;color:#1B2A4A;font-weight:600;text-align:right;padding:6px 0;">AXN-REF-001</td>
                  </tr>
                </table>
              </td></tr>
            </table>
            <p style="color:#374151;font-size:14px;line-height:1.6;margin:0 0 16px 0;">
              Your funds are held at First Internet Bank under the Axiom Nexus program, FDIC-insured up to $250,000.
              View your complete account history and balance at <a href="https://axiomprotocol.app/banking/my-account" style="color:#1D3D2A;font-weight:600;">axiomprotocol.app/banking/my-account</a>.
            </p>
            <table width="100%" cellpadding="0" cellspacing="0" style="margin:24px 0;">
              <tr>
                <td align="center">
                  <a href="https://axiomprotocol.app/banking/my-account" style="display:inline-block;background:#1D3D2A;color:#ffffff;text-decoration:none;padding:14px 36px;font-family:'Courier New',monospace;font-size:12px;letter-spacing:0.1em;text-transform:uppercase;font-weight:700;">
                    View My Account →
                  </a>
                </td>
              </tr>
            </table>
            <p style="color:#9ca3af;font-size:13px;line-height:1.5;margin:0;">
              To update or share your direct deposit details with an employer, visit
              <a href="https://axiomprotocol.app/direct-deposit" style="color:#6b7280;">axiomprotocol.app/direct-deposit</a>.
            </p>
          </td>
        </tr>
        <tr>
          <td style="background:#f9fafb;border-top:1px solid #e5e7eb;padding:20px 36px;">
            <p style="font-family:'Courier New',monospace;font-size:10px;color:#9ca3af;letter-spacing:0.1em;margin:0;">
              AXIOM NEXUS BANKING — FIRST INTERNET BANK — FDIC INSURED — axiomprotocol.app
            </p>
          </td>
        </tr>
      </table>
    </td></tr>
  </table>
</body>
</html>"
`;

exports[`sendWorkbookWelcomeEmail — snapshot > renders the all-params-present body with the checklist and CTA > workbook-welcome-email-html 1`] = `
"
<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
</head>
<body style="margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; background-color: #f5f5f5;">
  <table width="100%" cellpadding="0" cellspacing="0" style="background-color: #f5f5f5; padding: 40px 20px;">
    <tr>
      <td align="center">
        <table width="600" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
          
          <!-- Header -->
          <tr>
            <td style="background: linear-gradient(135deg, #f59e0b 0%, #d97706 100%); padding: 40px 30px; text-align: center;">
              <h1 style="color: #ffffff; margin: 0; font-size: 28px; font-weight: 700;">Land Reclamation Workbook</h1>
              <p style="color: #fef3c7; margin: 10px 0 0 0; font-size: 16px;">Your Heir Property Research Checklist</p>
            </td>
          </tr>
          
          <!-- Welcome Message -->
          <tr>
            <td style="padding: 40px 30px 20px 30px;">
              <h2 style="color: #1f2937; margin: 0 0 15px 0; font-size: 22px;">Welcome, Jane!</h2>
              <p style="color: #4b5563; font-size: 16px; line-height: 1.6; margin: 0;">
                Thank you for joining our community of families working to reclaim their ancestral land. 
                Below is your free Heir Property Research Checklist to help you get started.
              </p>
            </td>
          </tr>
          
          <!-- Checklist Section -->
          <tr>
            <td style="padding: 0 30px 30px 30px;">
              <div style="background-color: #fffbeb; border: 1px solid #fcd34d; border-radius: 8px; padding: 25px;">
                <h3 style="color: #92400e; margin: 0 0 20px 0; font-size: 18px;">📋 Your Heir Property Research Checklist</h3>
                
                <div style="margin-bottom: 15px;">
                  <p style="color: #78350f; font-weight: 600; margin: 0 0 10px 0;">Step 1: Gather Family Information</p>
                  <ul style="color: #4b5563; margin: 0; padding-left: 20px; line-height: 1.8;">
                    <li>Names of ancestors who may have owned land</li>
                    <li>Approximate birth/death dates</li>
                    <li>States/counties where they lived</li>
                    <li>Family stories about property ownership</li>
                  </ul>
                </div>
                
                <div style="margin-bottom: 15px;">
                  <p style="color: #78350f; font-weight: 600; margin: 0 0 10px 0;">Step 2: Search Census Records</p>
                  <ul style="color: #4b5563; margin: 0; padding-left: 20px; line-height: 1.8;">
                    <li>1870 Census (first census with freed persons)</li>
                    <li>1880-1940 Census records</li>
                    <li>Look for "O" (owns) or "R" (rents) columns</li>
                    <li>Note property values listed</li>
                  </ul>
                </div>
                
                <div style="margin-bottom: 15px;">
                  <p style="color: #78350f; font-weight: 600; margin: 0 0 10px 0;">Step 3: Search Land Records</p>
                  <ul style="color: #4b5563; margin: 0; padding-left: 20px; line-height: 1.8;">
                    <li>County deed records</li>
                    <li>BLM General Land Office (glorecords.blm.gov)</li>
                    <li>Freedmen's Bureau records</li>
                    <li>Tax records and property maps</li>
                  </ul>
                </div>
                
                <div style="margin-bottom: 15px;">
                  <p style="color: #78350f; font-weight: 600; margin: 0 0 10px 0;">Step 4: Document the Chain of Title</p>
                  <ul style="color: #4b5563; margin: 0; padding-left: 20px; line-height: 1.8;">
                    <li>Track property from original owner to present</li>
                    <li>Note any probate or estate records</li>
                    <li>Identify all potential heirs</li>
                    <li>Check for partition sales or tax forfeitures</li>
                  </ul>
                </div>
                
                <div>
                  <p style="color: #78350f; font-weight: 600; margin: 0 0 10px 0;">Step 5: Consult Legal Resources</p>
                  <ul style="color: #4b5563; margin: 0; padding-left: 20px; line-height: 1.8;">
                    <li>Check if your state has UPHPA protections</li>
                    <li>Contact a real estate attorney</li>
                    <li>Explore heirs' property legal clinics</li>
                    <li>Consider an Affidavit of Heirship</li>
                  </ul>
                </div>
              </div>
            </td>
          </tr>
          
          <!-- Stats Section -->
          <tr>
            <td style="padding: 0 30px 30px 30px;">
              <table width="100%" cellpadding="0" cellspacing="0">
                <tr>
                  <td width="33%" style="text-align: center; padding: 15px; background-color: #fef2f2; border-radius: 8px 0 0 8px;">
                    <div style="color: #dc2626; font-size: 24px; font-weight: 700;">$28B</div>
                    <div style="color: #7f1d1d; font-size: 12px;">Heir Property Value</div>
                  </td>
                  <td width="33%" style="text-align: center; padding: 15px; background-color: #fffbeb;">
                    <div style="color: #d97706; font-size: 24px; font-weight: 700;">3.5M</div>
                    <div style="color: #78350f; font-size: 12px;">Families Affected</div>
                  </td>
                  <td width="33%" style="text-align: center; padding: 15px; background-color: #eff6ff; border-radius: 0 8px 8px 0;">
                    <div style="color: #2563eb; font-size: 24px; font-weight: 700;">18</div>
                    <div style="color: #1e3a8a; font-size: 12px;">UPHPA States</div>
                  </td>
                </tr>
              </table>
            </td>
          </tr>
          
          <!-- CTA Button -->
          <tr>
            <td style="padding: 0 30px 40px 30px; text-align: center;">
              <a href="https://axiomprotocol.app/workbook" style="display: inline-block; background-color: #f59e0b; color: #ffffff; text-decoration: none; padding: 15px 40px; border-radius: 8px; font-weight: 600; font-size: 16px;">
                Start Using the Workbook →
              </a>
              <p style="color: #6b7280; font-size: 14px; margin: 15px 0 0 0;">
                Get AI-powered research assistance, family tree building, and more.
              </p>
            </td>
          </tr>
          
          <!-- Footer -->
          <tr>
            <td style="background-color: #1f2937; padding: 30px; text-align: center;">
              <p style="color: #9ca3af; font-size: 14px; margin: 0 0 10px 0;">
                <strong style="color: #ffffff;">Axiom Protocol</strong> | Building Generational Wealth On-Chain
              </p>
              <p style="color: #6b7280; font-size: 12px; margin: 0;">
                You're receiving this because you signed up for the Land Reclamation Workbook checklist.<br>
                <a href="https://axiomprotocol.app/unsubscribe" style="color: #9ca3af;">Unsubscribe</a>
              </p>
            </td>
          </tr>
          
        </table>
      </td>
    </tr>
  </table>
</body>
</html>
"
`;
